add  domain grid
