# swagger.json
@@ -17,7 +17,7 @@
   ],
   "servers": [
     {
-      "url": "http://localhost:9000",
+      "url": "http://localhost:9999",
       "description": "Development server"
     },
     {
@@ -188,7 +188,7 @@
         }
       }
     },
-    "/info/domains/{siteName}": {
+    "/info/domain/{siteName}": {
       "get": {
         "tags": [
           "BORDER PX1 API"
